Update and changes

--- a/index.html
+++ b/index.html
@@ -43,30 +43,29 @@
   <!-- MAIN -->
   <main uxmain>
     <div class="heading-content">
-      <div class="tagline-bar">
-        <button>Quote</button>
-        <p>
-          <i class="fa fa-skype"></i> Me.sample &squarf;
-          <i class="fa fa-envelope-o"></i> me@example.com
-        </p>
-      </div>
+      <!--<div class="tagline-bar">-->
+        <!--<p>-->
+          <!--<i class="fa fa-skype"></i> Me.sample &squarf;-->
+          <!--<i class="fa fa-envelope-o"></i> me@example.com-->
+        <!--</p>-->
+      <!--</div>-->
 
       <article class="artic1" align="center">
-        <span>Why Choose Us?</span>
+        <span><b>Why Choose Us?</b></span>
         <div class="section-1-content">
           <div>
             <i class="fa fa-thumbs-o-up"></i>
-            <p>Thumbs Up</p>
+            <p>Lorem Ipsum</p>
             <span>Lorem ipsum dolor ismet.</span>
           </div>
           <div>
             <i class="fa fa-comments-o"></i>
-            <p>Awsome Feed Backs</p>
+            <p>Lorem Ipsum</p>
             <span>Lorem ipsum dolor ismet.</span>
           </div>
           <div>
             <i class="fa fa-diamond"></i>
-            <p>Highly Standardized</p>
+            <p>Lorem Ipsum</p>
             <span>Lorem ipsum dolor ismet.</span>
           </div>
         </div>
@@ -75,15 +74,20 @@
       <article class="artic2 seta">
         <div>
           <span>
-            <b>Lorem Ipsum</b>
-            <i>Lorem ipsum dolor sit amet, corpora electram incorrupte ei vix. Ut aperiam feugiat noluisse eum. Vis ne invenire disputationi, per ea modo laudem tacimates. Ei sea atomorum gloriatur, adhuc atomorum est ei, eam at numquam sanctus. Per ad velit noster.</i>
+            <b>Lorem Ipsum Dolor Ismet</b>
+            <span>Lorem ipsum dolor sit amet, corpora electram incorrupte ei vix. Ut aperiam feugiat noluisse eum. Vis ne invenire disputationi, per ea modo laudem tacimates. Ei sea atomorum gloriatur, adhuc atomorum est ei, eam at numquam sanctus. Per ad velit noster.</span>
           </span>
         </div>
       </article>
 
-      <article class="artic2 setb">
+      <article class="artic1">
+        <div>
+          <span><b>Contact Us</b></span>
 
+        </div>
       </article>
+
+      <article class="artic2 setb"></article>
     </div>
   </main>
   <!-- END MAIN -->
@@ -91,7 +95,7 @@
   <!-- FOOTER -->
   <footer uxfoot>
     <div>
-      <span class="lighter-text"><i class="fa fa-leaf"></i> All Rights Reserved &copy; 2015. Website</span>
+      <span><i class="fa fa-leaf"></i> All Rights Reserved &copy; 2015. Website</span>
       <nav class="navigation-row bottom-nav">
         <ul class="nav-menu">
           <li>
